# py_sysml_v2_cps

./: .gitignore  README.md  pyproject.toml
docs/: architecture_overview.md  layout.md
examples/: parse_architecture.py
src/pycps_sysmlv2/: __init__.py  definitions.py  parser_utils.py  parsing.py  type_utils.py  utils.py
src/sysml/: __init__.py  definitions.py  helpers.py  parser.py  parsing.py  type_utils.py
tests/: test_error_handling.py  test_public_api.py  test_type_utils.py
tests/fixtures/aircraft_subset/: architecture.sysml  architecture_reference.json  system_connections.sysml
