[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssp-airplane-sysml"
version = "0.1.0"
description = "Standalone SysML parsing and helper utilities extracted from ssp_airplane."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "ssp_airplane contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sysml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
